--- a/SCION_WINDOW/SCION_WINDOW.vcxproj
+++ b/SCION_WINDOW/SCION_WINDOW.vcxproj
@@ -144,6 +144,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Windowing\Inputs\Button.h" />
+    <ClInclude Include="Windowing\Inputs\Gamepad.h" />
+    <ClInclude Include="Windowing\Inputs\GPButtons.h" />
     <ClInclude Include="Windowing\Inputs\Keyboard.h" />
     <ClInclude Include="Windowing\Inputs\Keys.h" />
     <ClInclude Include="Windowing\Inputs\Mouse.h" />
@@ -160,6 +162,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Windowing\Inputs\Button.cpp" />
+    <ClCompile Include="Windowing\Inputs\Gamepad.cpp" />
     <ClCompile Include="Windowing\Inputs\Keyboard.cpp" />
     <ClCompile Include="Windowing\Inputs\Mouse.cpp" />
     <ClCompile Include="Windowing\Window\Window.cpp" />
