--- a/SCION_EDITOR/SCION_EDITOR.vcxproj.filters
+++ b/SCION_EDITOR/SCION_EDITOR.vcxproj.filters
@@ -26,6 +26,10 @@
     <None Include="assets\shaders\basicShader.vert" />
     <None Include="assets\shaders\basicShader.frag" />
     <None Include="assets\scripts\main.lua" />
+    <None Include="assets\scripts\asteroids\entityDefs.lua" />
+    <None Include="assets\scripts\asteroids\utilities.lua" />
+    <None Include="assets\scripts\asteroids\assetDefs.lua" />
+    <None Include="assets\scripts\asteroids\ship.lua" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Application.h">
