--- a/SCION_UTILITIES/SCION_UTILITIES.vcxproj.filters
+++ b/SCION_UTILITIES/SCION_UTILITIES.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClInclude Include="ScionUtilities\SDL_Wrappers.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ScionUtilities\Timer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ScionUtilities\SDL_Wrappers.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ScionUtilities\Timer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
