Added new asteroid Class
Also added in the BG

--- a/SCION_EDITOR/SCION_EDITOR.vcxproj.filters
+++ b/SCION_EDITOR/SCION_EDITOR.vcxproj.filters
@@ -30,6 +30,7 @@
     <None Include="assets\scripts\asteroids\utilities.lua" />
     <None Include="assets\scripts\asteroids\assetDefs.lua" />
     <None Include="assets\scripts\asteroids\ship.lua" />
+    <None Include="assets\scripts\asteroids\asteroid.lua" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Application.h">
