--- a/SCION_EDITOR/SCION_EDITOR.vcxproj
+++ b/SCION_EDITOR/SCION_EDITOR.vcxproj
@@ -167,6 +167,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="assets\scripts\asteroids\assetDefs.lua" />
+    <None Include="assets\scripts\asteroids\asteroid.lua" />
     <None Include="assets\scripts\asteroids\entityDefs.lua" />
     <None Include="assets\scripts\asteroids\ship.lua" />
     <None Include="assets\scripts\asteroids\utilities.lua" />
