Started Collision System for Asteroids

--- a/SCION_EDITOR/SCION_EDITOR.vcxproj
+++ b/SCION_EDITOR/SCION_EDITOR.vcxproj
@@ -168,6 +168,7 @@
   <ItemGroup>
     <None Include="assets\scripts\asteroids\assetDefs.lua" />
     <None Include="assets\scripts\asteroids\asteroid.lua" />
+    <None Include="assets\scripts\asteroids\collision_system.lua" />
     <None Include="assets\scripts\asteroids\entityDefs.lua" />
     <None Include="assets\scripts\asteroids\ship.lua" />
     <None Include="assets\scripts\asteroids\utilities.lua" />
