--- a/SCION_EDITOR/SCION_EDITOR.vcxproj.filters
+++ b/SCION_EDITOR/SCION_EDITOR.vcxproj.filters
@@ -32,6 +32,8 @@
     <None Include="assets\scripts\asteroids\ship.lua" />
     <None Include="assets\scripts\asteroids\asteroid.lua" />
     <None Include="assets\scripts\asteroids\collision_system.lua" />
+    <None Include="assets\scripts\asteroids\projectile.lua" />
+    <None Include="assets\scripts\asteroids\game_data.lua" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Application.h">
