Moved Asteroid game out of editor

--- a/SCION_EDITOR/SCION_EDITOR.vcxproj
+++ b/SCION_EDITOR/SCION_EDITOR.vcxproj
@@ -171,7 +171,9 @@
     <None Include="assets\scripts\asteroids\collision_system.lua" />
     <None Include="assets\scripts\asteroids\entityDefs.lua" />
     <None Include="assets\scripts\asteroids\game_data.lua" />
+    <None Include="assets\scripts\asteroids\hud.lua" />
     <None Include="assets\scripts\asteroids\projectile.lua" />
+    <None Include="assets\scripts\asteroids\script_list.lua" />
     <None Include="assets\scripts\asteroids\ship.lua" />
     <None Include="assets\scripts\asteroids\utilities.lua" />
     <None Include="assets\scripts\main.lua" />
