--- a/SCION_SOUNDS/SCION_SOUNDS.vcxproj
+++ b/SCION_SOUNDS/SCION_SOUNDS.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{fffa50f2-8ab7-43a4-a807-2f4092d08828}</ProjectGuid>
-    <RootNamespace>SCIONCORE</RootNamespace>
+    <ProjectGuid>{6701d331-7d05-4366-b6ec-321ce61210b0}</ProjectGuid>
+    <RootNamespace>SCIONSOUNDS</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -71,12 +71,12 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(SolutionDir).\SCION_LOGGER;$(SolutionDir).\SCION_RENDERING;$(SolutionDir).\Dependencies\glm;$(SolutionDir).\Dependencies\entt;$(SolutionDir).\GLAD\glad\include;$(SolutionDir).\Scion2D\SOIL\include;$(SolutionDir).\Dependencies\lua_53\include;$(SolutionDir).\Dependencies\sol3;$(SolutionDir).\Dependencies\SDL\include;$(SolutionDir).\SCION_WINDOW;$(SolutionDir).\SCION_UTILITIES;$(SolutionDir)\SCION_SOUNDS\src;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir).\Dependencies\lua_53\lib;$(SolutionDir).\Dependencies\SDL\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir).\Dependencies\SDL\include;$(SolutionDir).\SCION_LOGGER\Logger;$(SolutionDir).\SCION_UTILITIES;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir).\Dependencies\SDL\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>$(SolutionDir).\SCION_LOGGER;$(SolutionDir).\SCION_RENDERING;$(SolutionDir).\Dependencies\glm;$(SolutionDir).\Dependencies\entt;$(SolutionDir).\GLAD\glad\include;$(SolutionDir).\Scion2D\SOIL\include;$(SolutionDir).\Dependencies\lua_53\include;$(SolutionDir).\Dependencies\sol3;$(SolutionDir).\Dependencies\SDL\include;$(SolutionDir).\SCION_WINDOW;$(SolutionDir).\SCION_UTILITIES;$(SolutionDir)\SCION_SOUNDS\src;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir).\Dependencies\lua_53\lib;$(SolutionDir).\Dependencies\SDL\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir).\Dependencies\SDL\include;$(SolutionDir).\SCION_LOGGER\Logger;$(SolutionDir).\SCION_UTILITIES;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir).\Dependencies\SDL\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -118,9 +118,6 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
-    <Lib>
-      <AdditionalDependencies>lua53.lib;SDL2.lib;SDL2_mixer.lib;%(AdditionalDependencies)</AdditionalDependencies>
-    </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -138,72 +135,23 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
-    <Lib>
-      <AdditionalDependencies>lua53.lib;SDL2.lib;SDL2_mixer.lib;%(AdditionalDependencies)</AdditionalDependencies>
-    </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ProjectReference Include="..\GLAD\GLAD.vcxproj">
-      <Project>{0c03cde2-8036-4a2d-8371-e29d11c49b0b}</Project>
-    </ProjectReference>
     <ProjectReference Include="..\SCION_LOGGER\SCION_LOGGER.vcxproj">
       <Project>{fd6b5ddd-ab4d-42fd-94d1-743406818fd7}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\SCION_RENDERING\SCION_RENDERING.vcxproj">
-      <Project>{f4e7f6ad-7f77-4592-8f6d-0b812015d805}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\SCION_SOUNDS\SCION_SOUNDS.vcxproj">
-      <Project>{6701d331-7d05-4366-b6ec-321ce61210b0}</Project>
     </ProjectReference>
     <ProjectReference Include="..\SCION_UTILITIES\SCION_UTILITIES.vcxproj">
       <Project>{7554576b-897a-4cd6-b89f-26bcc61cb401}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\SCION_WINDOW\SCION_WINDOW.vcxproj">
-      <Project>{087a6a3a-1033-4fab-873a-5a4c856d6e0f}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\SOIL\SOIL.vcxproj">
-      <Project>{5358dc1e-fc64-41ee-a180-dc28344028dc}</Project>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Core\ECS\Components\AnimationComponent.h" />
-    <ClInclude Include="Core\ECS\Components\BoxColliderComponent.h" />
-    <ClInclude Include="Core\ECS\Components\CircleColliderComponent.h" />
-    <ClInclude Include="Core\ECS\Components\Identification.h" />
-    <ClInclude Include="Core\ECS\Components\ScriptComponent.h" />
-    <ClInclude Include="Core\ECS\Components\SpriteComponent.h" />
-    <ClInclude Include="Core\ECS\Components\TransformComponent.h" />
-    <ClInclude Include="Core\ECS\Entity.h" />
-    <ClInclude Include="Core\ECS\MetaUtilities.h" />
-    <ClInclude Include="Core\ECS\Registry.h" />
-    <ClInclude Include="Core\Resources\AssetManager.h" />
-    <ClInclude Include="Core\Scripting\GlmLuaBindings.h" />
-    <ClInclude Include="Core\Scripting\InputManager.h" />
-    <ClInclude Include="Core\Scripting\SoundBindings.h" />
-    <ClInclude Include="Core\Systems\AnimationSystem.h" />
-    <ClInclude Include="Core\Systems\RenderSystem.h" />
-    <ClInclude Include="Core\Systems\ScriptingSystem.h" />
+    <ClInclude Include="src\Sounds\Essentials\Music.h" />
+    <ClInclude Include="src\Sounds\Essentials\SoundParams.h" />
+    <ClInclude Include="src\Sounds\MusicPlayer\MusicPlayer.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Core\ECS\Components\AnimationComponent.cpp" />
-    <ClCompile Include="Core\ECS\Components\BoxColliderComponent.cpp" />
-    <ClCompile Include="Core\ECS\Components\CircleColliderComponent.cpp" />
-    <ClCompile Include="Core\ECS\Components\SpriteComponent.cpp" />
-    <ClCompile Include="Core\ECS\Components\TransformComponent.cpp" />
-    <ClCompile Include="Core\ECS\Entity.cpp" />
-    <ClCompile Include="Core\ECS\MetaUtilities.cpp" />
-    <ClCompile Include="Core\ECS\Registry.cpp" />
-    <ClCompile Include="Core\Resources\AssetManager.cpp" />
-    <ClCompile Include="Core\Scripting\GlmLuaBindings.cpp" />
-    <ClCompile Include="Core\Scripting\InputManager.cpp" />
-    <ClCompile Include="Core\Scripting\SoundBindings.cpp" />
-    <ClCompile Include="Core\Systems\AnimationSystem.cpp" />
-    <ClCompile Include="Core\Systems\RenderSystem.cpp" />
-    <ClCompile Include="Core\Systems\ScriptingSystem.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Core\ECS\Entity.inl" />
-    <None Include="Core\ECS\Registry.inl" />
+    <ClCompile Include="src\Sounds\Essentials\Music.cpp" />
+    <ClCompile Include="src\Sounds\MusicPlayer\MusicPlayer.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
