Added SoundFX and SoundFxPlayer
* Finished the Music Player implementation
* Added SoundFxPlayer lua bindings
* Added some SoundFX to the Asteroids game

--- a/SCION_SOUNDS/SCION_SOUNDS.vcxproj
+++ b/SCION_SOUNDS/SCION_SOUNDS.vcxproj
@@ -146,12 +146,16 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Sounds\Essentials\Music.h" />
+    <ClInclude Include="src\Sounds\Essentials\SoundFX.h" />
     <ClInclude Include="src\Sounds\Essentials\SoundParams.h" />
     <ClInclude Include="src\Sounds\MusicPlayer\MusicPlayer.h" />
+    <ClInclude Include="src\Sounds\SoundPlayer\SoundFxPlayer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Sounds\Essentials\Music.cpp" />
+    <ClCompile Include="src\Sounds\Essentials\SoundFX.cpp" />
     <ClCompile Include="src\Sounds\MusicPlayer\MusicPlayer.cpp" />
+    <ClCompile Include="src\Sounds\SoundPlayer\SoundFxPlayer.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
