Started Renderer and LineBatchRenderer classes
* New Renderer class that wraps some of the OpenGL Functionality.
* Added in the new LineBatchRenderer. This will allow us to draw simple lines from the renderer class.
* TODOs:
* Finish filling out the Renderer class
* Lua Bindings for the Renderer class

--- a/SCION_EDITOR/SCION_EDITOR.vcxproj
+++ b/SCION_EDITOR/SCION_EDITOR.vcxproj
@@ -184,6 +184,8 @@
     <None Include="assets\scripts\utilities.lua" />
     <None Include="assets\shaders\basicShader.frag" />
     <None Include="assets\shaders\basicShader.vert" />
+    <None Include="assets\shaders\colorShader.frag" />
+    <None Include="assets\shaders\colorShader.vert" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Application.h" />
