--- a/SOIL/SOIL.vcxproj.filters
+++ b/SOIL/SOIL.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="include\SOIL\stbi_dds_aug_c.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\SOIL\stb_truetype.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\original\stb_image-1.09.c">
