Font, Rect, Circle, TextBatch Additions
* Added in the RectBatchRenderer
* Added in the CircleBatchRenderer
* Started the TextBatchRenderer
* Added garbage collection for lua after every render/update call
* Fixed Loading Fonts/FontsFromMemory
* Added Lua Draw calls for most primitves

--- a/SCION_EDITOR/SCION_EDITOR.vcxproj
+++ b/SCION_EDITOR/SCION_EDITOR.vcxproj
@@ -184,8 +184,12 @@
     <None Include="assets\scripts\utilities.lua" />
     <None Include="assets\shaders\basicShader.frag" />
     <None Include="assets\shaders\basicShader.vert" />
+    <None Include="assets\shaders\circleShader.frag" />
+    <None Include="assets\shaders\circleShader.vert" />
     <None Include="assets\shaders\colorShader.frag" />
     <None Include="assets\shaders\colorShader.vert" />
+    <None Include="assets\shaders\fontShader.frag" />
+    <None Include="assets\shaders\fontShader.vert" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Application.h" />
