--- a/SCION_EDITOR/SCION_EDITOR.vcxproj.filters
+++ b/SCION_EDITOR/SCION_EDITOR.vcxproj.filters
@@ -40,6 +40,10 @@
     <None Include="assets\scripts\TestProject\assetDefs.lua" />
     <None Include="assets\shaders\colorShader.vert" />
     <None Include="assets\shaders\colorShader.frag" />
+    <None Include="assets\shaders\circleShader.vert" />
+    <None Include="assets\shaders\circleShader.frag" />
+    <None Include="assets\shaders\fontShader.vert" />
+    <None Include="assets\shaders\fontShader.frag" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Application.h">
