--- a/SCION_PHYSICS/SCION_PHYSICS.vcxproj
+++ b/SCION_PHYSICS/SCION_PHYSICS.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{de1ff9a6-384c-4650-b2d1-6ce35bc46969}</ProjectGuid>
-    <RootNamespace>SCIONEDITOR</RootNamespace>
+    <ProjectGuid>{65815f51-122c-4263-9c5a-3544724537af}</ProjectGuid>
+    <RootNamespace>SCIONPHYSICS</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -40,13 +40,13 @@
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
@@ -70,14 +70,6 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(SolutionDir).\Dependencies\SDL\include;$(SolutionDir).\GLAD\glad\include;$(SolutionDir).\SCION_UTILITIES;$(SolutionDir).\SCION_WINDOW;$(SolutionDir).\SOIL\include;$(SolutionDir).\Dependencies\glm;$(SolutionDir).\SCION_RENDERING;$(SolutionDir).\SCION_LOGGER;$(SolutionDir).\Dependencies\entt;$(SolutionDir).\SCION_CORE;$(SolutionDir).\Dependencies\lua_53\include;$(SolutionDir).\Dependencies\sol3;$(SolutionDir).\SCION_SOUNDS\src;$(SolutionDir)\SCION_PHYSICS;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir).\Dependencies\SDL\lib;$(SolutionDir).\Dependencies\lua_53\lib;$(LibraryPath)</LibraryPath>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>$(SolutionDir).\Dependencies\SDL\include;$(SolutionDir).\GLAD\glad\include;$(SolutionDir).\SCION_UTILITIES;$(SolutionDir).\SCION_WINDOW;$(SolutionDir).\SOIL\include;$(SolutionDir).\Dependencies\glm;$(SolutionDir).\SCION_RENDERING;$(SolutionDir).\SCION_LOGGER;$(SolutionDir).\Dependencies\entt;$(SolutionDir).\SCION_CORE;$(SolutionDir).\Dependencies\lua_53\include;$(SolutionDir).\Dependencies\sol3;$(SolutionDir).\SCION_SOUNDS\src;$(SolutionDir)\SCION_PHYSICS;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir).\Dependencies\SDL\lib;$(SolutionDir).\Dependencies\lua_53\lib;$(LibraryPath)</LibraryPath>
-  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -117,7 +109,6 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>SDL2.lib;opengl32.lib;lua53.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -135,67 +126,13 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>SDL2.lib;opengl32.lib;lua53.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\Application.cpp" />
-    <ClCompile Include="src\main.cpp" />
+    <ClInclude Include="Physics\Box2DWrappers.h" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\GLAD\GLAD.vcxproj">
-      <Project>{0c03cde2-8036-4a2d-8371-e29d11c49b0b}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\SCION_CORE\SCION_CORE.vcxproj">
-      <Project>{fffa50f2-8ab7-43a4-a807-2f4092d08828}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\SCION_LOGGER\SCION_LOGGER.vcxproj">
-      <Project>{fd6b5ddd-ab4d-42fd-94d1-743406818fd7}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\SCION_PHYSICS\SCION_PHYSICS.vcxproj">
-      <Project>{65815f51-122c-4263-9c5a-3544724537af}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\SCION_RENDERING\SCION_RENDERING.vcxproj">
-      <Project>{f4e7f6ad-7f77-4592-8f6d-0b812015d805}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\SCION_SOUNDS\SCION_SOUNDS.vcxproj">
-      <Project>{6701d331-7d05-4366-b6ec-321ce61210b0}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\SCION_UTILITIES\SCION_UTILITIES.vcxproj">
-      <Project>{7554576b-897a-4cd6-b89f-26bcc61cb401}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\SCION_WINDOW\SCION_WINDOW.vcxproj">
-      <Project>{087a6a3a-1033-4fab-873a-5a4c856d6e0f}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\SOIL\SOIL.vcxproj">
-      <Project>{5358dc1e-fc64-41ee-a180-dc28344028dc}</Project>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="assets\scripts\asteroids\assetDefs.lua" />
-    <None Include="assets\scripts\asteroids\asteroid.lua" />
-    <None Include="assets\scripts\asteroids\collision_system.lua" />
-    <None Include="assets\scripts\asteroids\entityDefs.lua" />
-    <None Include="assets\scripts\asteroids\game_data.lua" />
-    <None Include="assets\scripts\asteroids\hud.lua" />
-    <None Include="assets\scripts\asteroids\projectile.lua" />
-    <None Include="assets\scripts\asteroids\script_list.lua" />
-    <None Include="assets\scripts\asteroids\ship.lua" />
-    <None Include="assets\scripts\asteroids\utilities.lua" />
-    <None Include="assets\scripts\main.lua" />
-    <None Include="assets\scripts\TestProject\assetDefs.lua" />
-    <None Include="assets\scripts\utilities.lua" />
-    <None Include="assets\shaders\basicShader.frag" />
-    <None Include="assets\shaders\basicShader.vert" />
-    <None Include="assets\shaders\circleShader.frag" />
-    <None Include="assets\shaders\circleShader.vert" />
-    <None Include="assets\shaders\colorShader.frag" />
-    <None Include="assets\shaders\colorShader.vert" />
-    <None Include="assets\shaders\fontShader.frag" />
-    <None Include="assets\shaders\fontShader.vert" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="src\Application.h" />
+    <ClCompile Include="Physics\Box2DWrappers.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
